--- a/_assets/stylesheets/pages/index.scss
+++ b/_assets/stylesheets/pages/index.scss
@@ -1,6 +1,10 @@
 #index {
   #tweet {
     margin-top: 2em;
+
+    #tweet-content {
+      @include word-wrap();
+    }
   }
 
   #eventstream {
